[package]
name = "reverse_proxy_sys_plugin_example"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reverse_proxy_sys = { git = "https://github.com/thedtvn/reverse_proxy_sys.git" }
http = "0"

[lib]
crate-type = ["dylib"]
